<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ted.capitalapp.MainActivity">




    <item
        android:id="@+id/home"
        android:orderInCategory="100"
        android:title="@string/Home"
        app:showAsAction="ifRoom"
        />


    <item
        android:id="@+id/back"
        android:orderInCategory="1000"
        android:title="Back"
        app:showAsAction= "ifRoom"
        />



    <item
        android:id="@+id/family"
        android:orderInCategory="300"
        android:title="@string/family"
        app:showAsAction="never"
        />




    <item
        android:id="@+id/historic"
        android:orderInCategory="400"
        android:title="@string/historic"
        app:showAsAction="never"
        />




    <item
        android:id="@+id/food"
        android:orderInCategory="500"
        android:title="@string/eat"
        app:showAsAction="never"
        />



    <item
        android:id="@+id/nightlife"
        android:orderInCategory="600"
        android:title="@string/nightlife"
        app:showAsAction="never"
        />


    <item
        android:id="@+id/shops"
        android:orderInCategory="700"
        android:title="@string/shops"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/bed"
        android:orderInCategory="800"
        android:title="@string/bed"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/tours"
        android:orderInCategory="900"
        android:title="@string/tours"
        app:showAsAction="never"
        />



</menu>
