<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ted.capital.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#63abd2"
    >


    <VideoView
        android:id="@+id/dublinvideo"
        android:layout_width="200dp"
        android:layout_height="125dp"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/videobutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@android:color/transparent"
        />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/capital2"
       android:layout_marginTop="135dp"
        android:paddingLeft="55dp"
        />

    <TextView
        android:layout_width="500dp"
        android:layout_height="25dp"
        android:text="Get to know the Capital!"
        android:id="@+id/textView"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="210dp"
        android:layout_marginLeft="60dp"
        android:textColor="#FFFFFF"
        />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/family"
        android:textColor="#C12283"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="20dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eat"
        android:textColor="#C12283"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="200dp"
        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shops"
        android:textColor="#C12283"
        android:layout_marginTop="295dp"
        android:layout_marginLeft="20dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/historic"
        android:textColor="#C12283"
        android:layout_marginTop="295dp"
        android:layout_marginLeft="200dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nightlife"
        android:textColor="#C12283"
        android:layout_marginTop="338dp"
        android:layout_marginLeft="20dp"
        />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tours"
        android:textColor="#C12283"
        android:layout_marginTop="338dp"
        android:layout_marginLeft="200dp"
        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bed"
        android:textColor="#C12283"
        android:layout_marginTop="385dp"
        android:layout_marginLeft="110dp"
        />





</RelativeLayout>
